# solr-mcp

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  solr.Dockerfile  test_ollama.py
data/: README.md  bitcoin-whitepaper.json
data/processed/: bitcoin_metadata.json  bitcoin_metadata.md  bitcoin_sections.json  bitcoin_sections_content.json  bitcoin_sections_simple.json  bitcoin_sections_solr.json  keyword_test.json  vector_test.json  vector_test_with_vectors.json
scripts/: README.md  check_solr.py  create_test_collection.py  create_unified_collection.py  demo_hybrid_search.py  demo_search.py  diagnose_search.py  direct_mcp_test.py  format.py  index_documents.py  lint.py  prepare_data.py  process_markdown.py  setup.sh  simple_index.py  simple_mcp_test.py  simple_search.py  unified_index.py  unified_search.py  vector_index.py  vector_index_simple.py  vector_search.py
solr_mcp/: __init__.py  __main__.py  server.py  utils.py
solr_mcp/embeddings/: __init__.py  client.py
solr_mcp/solr/: __init__.py  client.py  collections.py  config.py  constants.py  exceptions.py  interfaces.py  response.py  zookeeper.py
solr_mcp/tools/: __init__.py  base.py  embedding.py  facets.py  hybrid_search.py  search.py  solr_default_vectorizer.py  solr_list_collections.py  solr_list_fields.py  solr_select.py  solr_semantic_select.py  solr_vector_select.py  suggestions.py  tool_decorator.py  vector_search.py
solr_mcp/vector_provider/: __init__.py  constants.py  exceptions.py  interfaces.py
(+74 files in other folders)
