[tool.poetry]
name = "solr-mcp"
version = "0.1.0"
description = "A Python package for accessing Solr indexes via Model Context Protocol (MCP)"
authors = ["Allen Day <allenday@allenday.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/allenday/solr-mcp"
packages = [{include = "solr_mcp"}]

[tool.poetry.dependencies]
python = "^3.10"
pysolr = "^3.9.0"
mcp = "^1.4.1"
httpx = "^0.27.0"
pydantic = "^2.6.1"
numpy = "^1.26.3"
markdown = "^3.5.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-frontmatter = "^1.1.0"
loguru = "^0.7.3"
kazoo = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solr-mcp = "solr_mcp.server:main"